ags (4.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHybridFMSynth::refresh-port()

ags (4.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed apply presets
	* implemented AgsHybridSynth::refresh-port()
	* rebuild gtk-doc sections

ags (4.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented getter/setter of AgsAudioFile
	* improved API reference manual

ags (4.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed install path of gsequencer documentation

ags (4.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* using fop instead of dblatex to generate PDFs
	* fixed missing include of Gdk4 in ags_app_action_util.c

ags (4.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed make pdf

ags (4.1.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented zoom of PDF user manual
	* implemented unix print support
	* implemented application OS X accelerators
	* implemented notation edit OS X accelerators
	* implemented automation edit OS X accelerators
	* implemented wave edit OS X accelerators
	* implemented preset editor
	* new configure switch --with-gtk-unix-print

ags (4.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-fx-synth missing chorus destination buffer
	* fixed ags-fx-fm-synth missing chorus destination buffer
	* fixed ags-fx-sf2-synth missing chorus destination buffer
	* fixed ags-fx-sfz-synth missing chorus destination buffer

ags (4.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFMSyncsynth remove callback
	* fixed AgsCompositeEditor remove wave channel selector callback
	* fixed AgsCompositeEditor machine selector set flags
	* improved AgsGui and AgsAudio introspected annotations

ags (4.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unitialized value in ags_functional_fourier_transform_test.c
